[package]
name = "rust-hyper-web"
version = "0.1.0"
authors = ["snwallet <snwallet@qq.com>"]
edition = "2018"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
futures = "0.3"

url = "2.2"

mysql = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

rust-crypto = "^0.2"
rand = "^0.3"

base64 = "0.12.1"
time = "0.1.41"